make shinies be created for every card